--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -289,6 +289,10 @@ span.aside {
   margin-left: 10px; 
 }
 
+.gp-bullet-red2{ 
+  color:#ff0000;
+  margin-left: 10px; 
+}
 
 h6 {
     font-weight: bold;
